Added data-netlify attribute to form element

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <p>Please fill-up the form below to subscribe to our <b>M</b>onthly <b>B</b>ytes newsletter.
         We send you the quality content every month.</p>
 
-        <form action="/src/success.html" method="POST" name="subscription">
+        <form action="/src/success.html" method="POST" name="subscription" data-netlify="true">
             <label for="fullName">Full Name</label>
             <input type="text" name="fullName" id="fullName"
                 placeholder="We want to know your name" />
