--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,50 @@
+  
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./index.css">
     <title>Monthly Bytes</title>
 </head>
+
 <body>
     <header>
         <h1>Monthly Bytes</h1>
     </header>
     <div class="content">
         <p>Please fill-up the form below to subscribe to our <b>M</b>onthly <b>B</b>ytes newsletter.
-        We send you the quality content every month.</p>
+            We send you the quality content every month.</p>
+        <form action="/success" method="POST" name="subscription" data-netlify="true" netlify-honeypot="bot-field">
 
-        <form action="/src/success.html" method="POST" 
-            name="subscription" 
-            data-netlify="true"
-            netlify-honeypot="bot-field>
-            
-            <label for="fullName">Full Name</label>
-            <input type="text" name="fullName" id="fullName"
-                placeholder="We want to know your name" />
+            <p class="hidden">
+                <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+            </p>
 
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email"
-                placeholder="Tell us your email">
+            <label for="fullName">Full name</label>
+            <input type="text" name="fullName" id="fullName" placeholder="We want to know your name" />
+
+            <label for="email">E-mail</label>
+            <input type="email" name="email" id="email" placeholder="Tell us your e-mail id" />
 
             <div>
                 <h2>I want to get it</h2>
                 <label>
-                    <input type="radio" name="frequency" value="daily" checked>Daily
+                    <input type="radio" name="frequency" value="daily" checked> Daily
                 </label>
+
                 <label>
-                    <input type="radio" name="frequency" value="weekly">Weekly
+                    <input type="radio" name="frequency" value="weekly"> Weekly
                 </label>
             </div>
-            <p class="hidden">
-                <label>Don’t fill this out if you’re human: 
-                     <input name="bot-field" />
-                </label>
-             </p>             
 
             <button type="submit">Subscribe</button>
         </form>
     </div>
 </body>
+
 </html>
